# i86emu

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  imgui.ini
Resources/: DasmColorTheme.json
src/: CMakeLists.txt  main.cpp
src/Controller/: CMakeLists.txt  CPUController.hpp  ColorThemeController.cpp  ColorThemeController.hpp  DisassemblerController.hpp  RAMController.cpp  RAMController.hpp
src/Core/: Application.cpp  Application.hpp  CMakeLists.txt  EmulatorApp.cpp  EmulatorApp.hpp
src/Interfaces/: CMakeLists.txt  IIODevice.hpp  IMemoryDevice.hpp  IMemoryObserver.hpp  IViewWindow.hpp
src/Model/: CMakeLists.txt  CPUState.hpp  ColorTheme.hpp  Disassembler.cpp  Disassembler.hpp  Flags.hpp  I8086.cpp  I8086.hpp  IOBus.cpp  IOBus.hpp  Instructions.hpp  MemoryBus.cpp  MemoryBus.hpp  RAM.hpp  Register.hpp  Token.hpp
src/Utils/: ChildPanel.hpp  Panel.hpp  types.hpp  utils.hpp
src/View/: CMakeLists.txt  DisassemblerWindow.cpp  DisassemblerWindow.hpp  MemoryEditorWindow.cpp  MemoryEditorWindow.hpp  StateWindow.cpp  StateWindow.hpp
